syntax = "proto3";

package com.example.news.data.model;

// Represents a Source (nested object inside ArticleDto)
message SourceDto {
  string id = 1;
  string name = 2;
}


message Article {
  SourceDto source = 1;
  string author = 2;
  string title = 3;
  string description = 4;
  string url = 5;
  string imageUrl = 6;
  string publishedAt = 7;
  string content = 8;
}


message ArticleList {
  repeated Article articles = 1;
}
